--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
         <h1 class="main-header">Questions</h1>
     </header>
     <main>
-        <p class="question"> </p>
+        <h2 class="questions">What worked well over the last eight weeks and aided your learning process?</h2>
+        <p>Recreating images and being able to experiment with different concepts to achieve my goal. As well as utilizing outside resources such as w3 schools.</p>
+        <br>
+        <h2 class="questions">What would you change about the course?</h2>
+        <p>If possible I would extend this course into a full term curriculum</p>
+        <br>
+        <h2 class="questions">What concepts were new to you, and what concepts have you already encountered in the past?</h2>
+        <p>outside libraries such as google fonts and bootstrap were new to me as well as positioning. I had already encountered the basics of styling when I had taken
+            the html course.
+        </p>
     </main>
     
 </body>
